# FleetFlow

backend/: .env  fleetflow.db  main.py  pyproject.toml
backend/app/core/: config.py  rbac.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: driver.py  expense.py  fuel.py  maintenance.py  trip.py  user.py  vehicle.py
backend/app/realtime/: manager.py
backend/app/routers/: auth.py  dashboard.py  drivers.py  expenses.py  fuel.py  maintenance.py  realtime.py  trips.py  users.py  vehicles.py
backend/app/services/: auth_service.py
frontend/: package-lock.json
frontend/src/api/: authApi.js  axios.js  vehicleApi.js
frontend/src/components/common/: Loader.jsx  ProtectedRoute.jsx
frontend/src/components/layout/: Layout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  ConfirmDialog.jsx  Input.jsx  KpiCard.jsx  Modal.jsx  PageContainer.jsx  StatusPill.jsx  Table.jsx  TableWrapper.jsx
frontend/src/constants/: roles.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/analytics/: Analytics.jsx
frontend/src/pages/auth/: Login.jsx
frontend/src/pages/cargo/: Cargo.jsx  CargoForm.jsx
frontend/src/pages/dashboard/: Dashboard.jsx
frontend/src/pages/drivers/: DriverForm.jsx  Drivers.jsx
frontend/src/pages/expenses/: ExpenseForm.jsx  Expenses.jsx
frontend/src/pages/maintenance/: Maintenance.jsx  MaintenanceForm.jsx
frontend/src/pages/trips/: TripForm.jsx  Trips.jsx
frontend/src/pages/vehicles/: VehicleForm.jsx  Vehicles.jsx
frontend/src/routes/: AppRoutes.jsx
