[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[crytography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
